--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -10,7 +10,7 @@ author: by Nutty
 # setting global Options as echo=TRUE
 ```
 
-## Loading and preprocessing the data
+##<span style="color:blue">Loading and preprocessing the data</span>
 
 1. Load the data (i.e. 𝚛𝚎𝚊𝚍.𝚌𝚜𝚟())
 ```{r Loading}
@@ -30,7 +30,7 @@ actread$weekpart <-
            "Weekday")
 ```
 
-## What is mean total number of steps taken per day?
+##<span style="color:blue">What is mean total number of steps taken per day?</span>
 
 1. Calculate the total number of steps taken per day
 ```{r Mean omit NA}
@@ -42,6 +42,7 @@ stepsum <-
     aggregate(actomitna$steps,
               by = list(actomitna$date),
               sum)
+names(stepsum) <- c("Date","steps")
 ```
 
 2. Make a histogram of the total number of steps taken each day
@@ -50,7 +51,7 @@ stepsum <-
 # Plotting Histogram
 library(ggplot2)
 par(mar = c(5, 5, 5, 2))
-ggplot(stepsum, aes(x)) +
+ggplot(stepsum, aes(steps)) +
     geom_histogram(binwidth = 2500, aes(fill = ..count..)) +
     scale_fill_gradient("Count", low = "green", high = "orange") +
     theme(
@@ -72,8 +73,8 @@ ggplot(stepsum, aes(x)) +
     ) +
     xlim(0, 25000) +
     ylim(0, 20) +
-    labs(title = "Histogram of Total Steps per day \n(NAs omitted)") +
-    xlab("Total Steps per day") +
+    labs(title = "Histogram of Total steps per day \n(NAs omitted)") +
+    xlab("Total Steps Per Day") +
     ylab("Frequency")
 ```
 
@@ -86,11 +87,12 @@ actmean <- mean(stepsum[, 2])
 actmedian <- median(stepsum[, 2])
 ```
 
+  
+The **MEAN** total number of steps taken per day after removing NA values is **`r actmean`**   
 
-The MEAN total number of steps taken per day after removing NA values is `r actmean`   
-The MEDIAN total number of steps taken per day after removing NA values is `r actmedian`
+The **MEDIAN** total number of steps taken per day after removing NA values is **`r actmedian`**
 
-## What is the average daily activity pattern?
+##<span style="color:blue">What is the average daily activity pattern?</span>
 
 1. Make a time series plot (i.e. 𝚝𝚢𝚙𝚎 = "𝚕") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 ```{r mean}
@@ -100,13 +102,14 @@ avgday <-
               by = list(actread$interval),
               mean,
               na.rm = TRUE)
+names(avgday) <- c("interval","steps")
 ```
 
 ```{r Time Series Plot,fig.height=6,fig.width=8,fig.align='center',results='asis'}
 # Time Series plot
 library(ggplot2)
 par(mar = c(5, 5, 5, 2))
-ggplot(avgday, aes(Group.1, x)) +
+ggplot(avgday, aes(interval, steps)) +
     geom_line(color = "brown") +
     theme(
         panel.background = element_blank(),
@@ -138,9 +141,9 @@ maxavg <- avgday[max(avgday[,2]),]
 ```
 
 
-The 5-Minute interval which the highest average (`r maxavg[,2]`) numer of steps is `r maxavg[,1]`  
+The 5-Minute interval which the highest average (`r maxavg[,2]`) numer of steps is **`r maxavg[,1]`**  
 
-## Imputing missing values
+##<span style="color:blue">Imputing missing values</span>
 
 1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with 𝙽𝙰s)
 ```{r NA count}
@@ -149,7 +152,7 @@ stepsna <- sum(is.na(actread[,1]))
 ```
 
 
-`r stepsna` rows have NA values  
+**`r stepsna`** rows have NA values  
 
 2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
 
@@ -160,10 +163,11 @@ cleanday <-
     aggregate(actclean$steps,
               by = list(actclean$interval),
               mean)
+names(cleanday) <- c("interval","avgsteps")
 nachunk <- actread[is.na(actread$steps), ]
 naimpute <-
-    merge(nachunk, cleanday, by.x = "interval", by.y = "Group.1")
-naimpute$steps <- round(naimpute$x, 0)
+    merge(nachunk, cleanday, by.x = "interval", by.y = "interval")
+naimpute$steps <- round(naimpute$avgsteps, 0)
 ```
 
 
@@ -183,13 +187,14 @@ freshstep <-
     aggregate(actfresh$steps,
               by = list(actfresh$date),
               sum)
+names(freshstep) <- c("Date","steps")
 ```
 
 ```{r New Histogram,fig.height=6,fig.width=8,fig.align='center',results='asis'}
 # Plotting New Histogram
 library(ggplot2)
 par(mar = c(5, 5, 5, 2))
-ggplot(freshstep, aes(x)) +
+ggplot(freshstep, aes(steps)) +
     geom_histogram(binwidth = 2500, aes(fill = ..count..)) +
     scale_fill_gradient("Count", low = "navy blue", high = "purple") +
     theme(
@@ -211,8 +216,8 @@ ggplot(freshstep, aes(x)) +
     ) +
     xlim(0, 25000) +
     ylim(0, 25) +
-    labs(title = "Histogram of Total Steps per day") +
-    xlab("Total Steps per day") +
+    labs(title = "Histogram of Total steps per day") +
+    xlab("Total Steps Per Day") +
     ylab("Frequency")
 ```
 
@@ -228,17 +233,18 @@ Impactmedian <- actmedian-freshmedian
 ```
 
 
-The MEAN total number of steps taken per day after imputing NA values is `r freshmean`   
-The MEDIAN total number of steps taken per day after imputing NA values is `r freshmedian`
+The **MEAN** total number of steps taken per day after imputing NA values is **`r freshmean`**   
+The **MEDIAN** total number of steps taken per day after imputing NA values is **`r freshmedian`**
 
-The impact of the missing data on the MEAN is `r Impactmean` steps and on the MEDIAN is `r Impactmedian` steps   
+The impact of the missing data on the MEAN is **`r Impactmean`** steps and on the MEDIAN is **`r Impactmedian`** steps   
 
 
-## Are there differences in activity patterns between weekdays and weekends?
+##<span style="color:blue">Are there differences in activity patterns between weekdays and weekends?</span>
 
 1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
 ```{r compare}
 # New factor variable
+# Note: We are using the imputed data for NA values here
 weekact <-
     aggregate(actfresh$steps,
               by = c(list(actfresh$interval), list(actfresh$weekpart)),
@@ -262,11 +268,11 @@ ggplot(weekact, aes(interval, steps)) +
         panel.grid.minor = element_blank(),
         axis.line = element_line(color = "black", size = 0.5),
         axis.text.x = element_text(size = 12),
-        axis.title.x = element_text(size = 12),
+        axis.title.x = element_text(size = 12,color="brown"),
         axis.text.y = element_text(size = 12),
-        axis.title.y = element_text(size = 12),
-        strip.text = element_text(size = 12, color = "red"),
-        strip.background = element_rect(fill = "light blue"),
+        axis.title.y = element_text(size = 12,color="brown"),
+        strip.text = element_text(size = 12, color = "black"),
+        strip.background = element_rect(fill = "light gray"),
         plot.title = element_text(
             family = "Palatino",
             size = 15,
@@ -281,4 +287,5 @@ ggplot(weekact, aes(interval, steps)) +
     xlab("5-Mintue Interval")
 ```
 
+ <center>   ---END OF CODE---</center>
 
