--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -137,7 +137,7 @@ ggplot(avgday, aes(interval, steps)) +
 2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 ```{r maximum steps}
 # Calculate Max value
-maxavg <- avgday[max(avgday[,2]),]
+maxavg <- avgday[which(avgday[,2]==max(avgday[,2])),]
 ```
 
 
